rectified the issue of some elements overflowing

--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ body {
 
 .article-head {
   grid-area: article-start;
-  width: 70%;
+  width: 75%;
   margin: auto;
 }
 
@@ -216,7 +216,7 @@ body {
 
 .theory-inflation-section {
   grid-area: theory-inflation;
-  width: 70%;
+  width: 75%;
   margin: auto;
 }
 
@@ -279,7 +279,7 @@ body {
   position: absolute;
   width: 24%;
   left: 0;
-  bottom: 2rem;
+  bottom: 1rem;
 }
 
 .inf6 {
@@ -356,18 +356,18 @@ body {
 
 .more {
   grid-area: more-section;
-  width: 90%;
+  width: 95%;
   margin: auto;
 }
 
 .more_in_space {
   float: left;
-  width: 70%;
+  width: 75%;
   margin: auto;
   border-top: 1px solid black;
   display: grid;
   grid-template-columns: repeat(3, 33%);
-  grid-template-rows: repeat(9, auto);
+  grid-template-rows: repeat(8, auto);
   grid-gap: 0 5px;
   grid-template-areas:
     "sec-title sec-title sec-title"
@@ -509,7 +509,7 @@ body {
 
 .editors-picks-main {
   float: left;
-  width: 70%;
+  width: 75%;
   border-top: 1px solid black;
   margin-top: 20px;
   display: grid;
@@ -568,7 +568,7 @@ body {
 
 .most_popular {
   float: right;
-  max-width: 25%;
+  max-width: 23%;
   border-top: 1px solid black;
 }
 
@@ -591,7 +591,7 @@ body {
 
 .lower-navigation-section {
   border-top: 2px solid #e2e2e2;
-  width: 90%;
+  width: 95%;
   margin: 20px auto auto auto;
   grid-area: lower-nav;
 }
@@ -647,7 +647,7 @@ body {
   border-top: 1px solid #e2e2e2;
   color: gray;
   grid-area: footer;
-  width: 90%;
+  width: 95%;
   margin: auto;
   font-size: 0.8125rem;
   padding: 10px 0 25px 0;
